--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,4 +1,4 @@
-<div class="">
+<div class="Post">
   <h1>Hello Angular World!!!</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At neque officia quia quo rem, reprehenderit repudiandae
     voluptas? Eum, obcaecati voluptatibus!</p>
