--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,13 @@
 <h1>Hello World</h1>
+<hr>
+<!--<p>{{title}}</p>-->
+<!--<p>{{num}}</p>-->
+<!--<p>{{arr}}</p>-->
+<!--<p>{{obj.b.c}}</p>-->
+<!--<p>{{50 - 2}}</p>-->
+<!--<p>{{obj.b.c}}</p>-->
+<!--<p>{{'hello' + ' angular' + ' world'}}</p>-->
+<img [src]="img" alt="">
 <app-post></app-post>
 <hr>
 <app-post></app-post>
