--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <h1>Hello World</h1>
-<app-post></app-post>
 <hr>
-<app-post></app-post>
-<hr>
-<app-post3></app-post3>
+<!--<input type="text" [value]="title" (input)="OnInput($event)">-->
+<input type="text" [(ngModel)]="title">
+<p>{{title}}</p>
